package maidsafe.priv.process_management.protobuf;

message VaultInfo {
  required bytes account_name = 1;
  required bytes keys = 2;
  required bytes chunkstore_path = 3;
  required uint64 chunkstore_capacity = 4;
  required bool requested_to_run = 5;
}

message VaultsManagerConfig {
  required uint32 update_interval = 1;  // In seconds
  required bytes bootstrap_nodes = 2;
  optional bytes latest_local_version = 3;
  optional bytes vault_permissions = 4;
  repeated VaultInfo vault_info = 5;
}
